# Improvemts and Fixes
* Rename files, variables and methods
* split methods into smaller ones
* Updating now shows a correct error report