@@ -13,7 +13,8 @@ import com.msc.serverbrowser.util.StringUtil;
 public class OSUtil
 {
 	/**
-	 * Preserved os name, since it won't change anyways and reading from a variable is faster.
+	 * Preserved os name, since it won't change anyways and reading from a variable
+	 * is faster.
 	 */
 	private final static String OS = System.getProperty("os.name").toLowerCase();
 
@@ -26,7 +27,8 @@ public class OSUtil
 	}
 
 	/**
-	 * Opens a website using the default browser. It will automatically apply http:// infront of the
+	 * Opens a website using the default browser. It will automatically apply
+	 * http:// infront of the
 	 * url if not existant already.
 	 *
 	 * @param urlAsString
@@ -38,8 +40,11 @@ public class OSUtil
 
 		try
 		{
-			final URL url = new URL(StringUtil.fixUrlIfNecessary(urlAsString));
-			desktop.browse(new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef()));
+			final String fixedUrl = StringUtil.fixUrlIfNecessary(urlAsString);
+			System.out.println("Totlly fixed: " + fixedUrl);
+			final URL url = new URL(fixedUrl);
+			desktop.browse(new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(),
+					url.getQuery(), url.getRef()));
 		}
 		catch (final IOException | URISyntaxException exception)
 		{
